--- a/index.html
+++ b/index.html
@@ -243,10 +243,11 @@
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
+                margin-top: 5px;
             }
 
             .header {
-                padding: 15px 10px;
+                padding: 20px 10px 15px 10px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -280,7 +281,7 @@
             }
 
             .toggle-controls {
-                display: block;
+                top: 85px;
             }
 
             .filter-buttons {
