トグルコントロールの表示を有効にし、位置を少し下に調整しました。

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         }
 
         .toggle-controls {
-            display: none;
+            display: block;
             position: fixed;
-            top: 80px;
+            top: 85px;
             right: 20px;
             z-index: 1000;
             background: #667eea;
