リプライのフィルタリング条件を修正し、リプライのテキストに対するチェックを`startsWith`から`includes`に変更しました。

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 
             filteredData = combinedTwitterData.filter(tweet => {
                 // リプライのフィルタリング
-                if (!showReplies && tweet.text.startsWith('@')) {
+                if (!showReplies && tweet.text.includes('@')) {
                     return false;
                 }
 
